Basic protection algorithm for atom manifest (won't work on real data, but it is a start)